@@ -209,8 +209,8 @@ class ProjectsControllerTest < Test::Unit::TestCase
     mock.expects(:parse_log).returns([])
   end
   
-  def test_should_disable_build_now_button_if_DISABLE_BUILD_is_set_true
-    $DISABLE_BUILD = true
+  def test_should_disable_build_now_button_if_configured_to_do_so
+    Configuration.stubs(:disable_build_now).returns(true)
     Projects.expects(:load_all).returns([create_project_stub('one', 'success')])
     get :index
     assert_tag :tag => "button", :attributes => {:onclick => /return false;/}
